1999-10-08  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-mdi-session.c (restore_window): take care of the case when
	there are no children to restore: merely open a new, empty toplevel
	window.

1999-10-07  Elliot Lee  <sopwith@redhat.com>

	* animator_demo.c, dock_demo.c, gnome-app-helper.c,
 	gnome-client.[ch], gnome-entry.c, gnome-init.[ch]: Use new init
 	system
	* gnome-dateedit.c: Fix warning, include ctype.h for isdigit().
	* gnome-dentry-edit.c, gnome-icon-entry.c, gnome-icon-sel.c: Avoid using deprecated functions.
	* makeenums.pl: Skip files with / DEPRECATED / in them.
	* gnome-dns.h, gnome-font-selector.h, gnome-guru.h, gnome-less.h,
 	gnome-preferences.h, gnome-properties.h, gnome-property-entries.h,
 	gnome-spell.h, gnome-startup.h, gtk-ted.h, gtkcauldron.h: Add deprecated marking so
 	makeenums.pl will skip this
	* gnometypebuiltins*.[ch]: Rebuild
	* libgnomeui.h: Exclude all deprecated stuff. Add defines for backwards source compat to new system.

1999-09-28  Elliot Lee  <sopwith@redhat.com>
	* gnome-init.c (gnome_segv_handle): Only dump core if $GNOME_DUMP_CORE is set.
	  Pass the app version to gnome_segv.
	* gnome_segv.c: add more items to the URL that is given to the user (app
	version, 

1999-10-06  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* gnome_segv.c (main): add a hook for the soon-to-be available
	bug-buddy program

Tue Oct  5 02:35:47 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* gnome-init.c (initialize_gtk_signal_relay): Free value
 	returned from gnome-config.
 
1999-10-05  Russell Steinthal  <rms39@columbia.edu>
	* gnome-dateedit.c (gnome_date_edit_get_date): Improve handling of
	invalid times: don't segfault when there is no colon in a time,
	default omitted trailing time fields (i.e. allow 8 for 8:00:00).
	Allow entry of seconds.

1999-10-03  Ettore Perazzoli  <ettore@comm2000.it>

	* gnome-dock.c (drag_floating): Realize, map and queue_resize the
	new child manually.

	* gnome-dock-band.c (gnome_dock_band_remove): Do